Tidy up default widgets, fix layout issues

--- a/09-MagicMirror/mirror_webapp/static/style.css
+++ b/09-MagicMirror/mirror_webapp/static/style.css
@@ -4,14 +4,16 @@ h1                        { font-size: 2.5vw; }
 h2                        { font-size: 2.0vw; }
 p                         { font-size: 1.2vw; color: #FFF; }
 
-.widget                   { width: -moz-min-content; width: -webkit-min-content; width: min-content; padding: 5px; }
+.widget                   { width: -moz-min-content; width: -webkit-min-content; width: min-content; padding: 10px; }
 .floating-widget          { position: absolute; }
 .widget-title             { white-space: nowrap; }
 .widget-title-borders     { padding-left: 10px; }
 .widget-contents          { width: 200px; }
 .widget-contents-borders  { border: 2px solid #FFF; border-radius: 15px; padding: 0px 5px;}
 
-#top-bar                  { }
+.widget-layout-section    { clear: both; }
+#top-bar > div            { float: left; }
 #left-bar                 { float: left; }
 #right-bar                { float: right; }
 #bottom-bar               { position:absolute; bottom:0; }
+#bottom-bar > div         { float: left; }
